Pages/css/navbar.css
#title-link {
    text-decoration: none; /* Removes underline from the title */
}

#title {
    color: white;
    font-family: "playfair display", serif;
    margin: 0;
    padding-left: 20px; /* Adds some spacing from the edge */
}

.nav-container {
    display: flex;
    align-items: center;
    justify-content: space-between; /* Pushes title left, nav items right */
    background-color: #090c08;
    padding: 10px;
}

ul {
    list-style: none; /* Removes bullet points */
    display: flex;
    margin: 0;
    padding: 0;
    font-family: "playfair display", serif;
}

li a {
    text-decoration: none; /* Removes underline */
    color: white;
    padding: 10px 30px;
}

li a:hover {
    background-color: rgb(56, 56, 56);
}

li a:active {
    background-color: white;
    color: black;
}

body {
    margin: 0;
}

